[package]
name = "painter"
version = "0.1.0"
edition = "2021"

[lib]
name = "painter"
path = "src/lib.rs"

[dependencies]
stream = { git = "https://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@github.com/Mehrbod2002/stream-elearning.git", features = ["desktop"] }
bytemuck = "1.7.2"
tokio = { version = "1.40.0", features = ["full"] }
egui = "0.30.0"
dioxus = { git = "https://github.com/mehrbod2002/dioxus.git", branch = "custom_window", features = ["desktop", "router", "hooks"] }
egui-wgpu = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["png", "jpeg"] }
pollster = "0.4"
wgpu = "23.0.0"
glyphon = "0.7.0"
prost-types = "0.13.4"
uuid = { version = "1.11.0",  features = ["v4"]}
